--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app would like to access your photo library for image uploading functionality.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app would like to use your camera for image uploading functionality.</string>
 	<key>CFBundleDisplayName</key>
 	<string>Potential Potato</string>
 	<key>CFBundleExecutable</key>
